# BeeBoop

./: .gitignore  Cargo.toml  LEADLAG_ANALYSIS_REPORT.md  analyze_deep.py  analyze_leadlag.py  approve_contracts.py  check_data.py  find_tokens.py  mint_window.py  peek_market.py  sniper_sweeper.py
src/: config_v2.rs  main.rs  main_btc_mint.rs  main_eth.rs  main_lockprofit_bnb.rs  main_lockprofit_eth.rs  main_lockprofit_sol.rs  main_lockprofit_xrp.rs  main_sol.rs  main_v2.rs  main_vidarx.rs  main_vidarx_btc15.rs  main_vidarx_eth.rs  main_vidarx_sol.rs  main_vidarx_xrp.rs  state.rs  types.rs  types_v2.rs
src/binance_l2/: mod.rs
src/execution/: mod.rs
src/execution_v2/: executor.rs  executor_tmp.rs
src/feeds/: binance.rs  market_ws.rs  mod.rs  polymarket_ws.rs  rtds.rs  user_ws.rs
src/leadlag_lab/: mod.rs
src/logging/: mod.rs  trade_log.rs
src/market/: discovery.rs
src/market_ws/: mod.rs
src/portfolio/: position_manager.rs
src/risk/: mod.rs
src/rtds/: mod.rs
src/signals/: features.rs  mod.rs  signal_engine.rs
src/sim/: mod.rs
src/strategy/: mod.rs
src/strategy_v2/: sniper.rs
src/telemetry/: mod.rs
src/user_ws/: mod.rs
